add a function to draw the function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="row">
               <div class="col s12 m2 l2 offset-m1 offset-l1">
                 <p>移動</p>
-                <a class="waves-effect waves-light btn" href="javascript:canvas_random_draw()">←</a>
+                <a class="waves-effect waves-light btn" href="javascript:canvas_draw()">←</a>
                 <a class="waves-effect waves-light btn" href="javascript:move_right()">→</a>
               </div>
               <div class="col s12 m8 l8">
