--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="js/main.js"></script>
   </head>
 
-  <body>
+  <body onLoad="initialize();">
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo center">Logo</a>
@@ -38,8 +38,8 @@
             <div class="row">
               <div class="col s12 m2 l2 offset-m1 offset-l1">
                 <p>移動</p>
-                <a class="waves-effect waves-light btn" href="javascript:canvas_draw()">←</a>
-                <a class="waves-effect waves-light btn" href="javascript:move_right()">→</a>
+                <a class="waves-effect waves-light btn" href="javascript:move_to_left()">←</a>
+                <a class="waves-effect waves-light btn" href="javascript:move_to_right()">→</a>
               </div>
               <div class="col s12 m8 l8">
                 <p>ステップ幅（1回の移動で動く幅）</p>
