add functions to move the position

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                   <p>0</p>
                 </div>
                 <div class="col s10">
-                  <form name="range">
+                  <form>
                     <p class="range-field">
-                      <input type="range" min="1" max="100" />
+                      <input type="range" id="range1" min="1" max="25" />
                     </p>
                   </form>
                 </div>
                 <div class="col s1">
-                  <p>100</p>
+                  <p>25</p>
                 </div>
               </div>
             </div>
