--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <a class="waves-effect waves-light btn" href="javascript:move_to_left()">←</a>
                 <a class="waves-effect waves-light btn" href="javascript:move_to_right()">→</a>
               </div>
-              <div class="col s12 m8 l8">
+              <div class="col s12 m8s l8">
                 <p>ステップ幅（1回の移動で動く幅）</p>
                 <div class="col s1">
-                  <p>0</p>
+                  <p>1</p>
                 </div>
                 <div class="col s10">
                   <form>
