--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <div class="col s6">
         <div class="card">
           <div class="card-content">
-            <span class="card-title">Card Title</span>
+            <span class="card-title">Display</span>
             <canvas id="canvas1" width="800" height="400" style="border:solid 1px #AAA"></canvas>
           </div>
           <div class="card-action">
             <div class="row">
-              <div class="col s12 m2 l2 offset-m1 offset-l1">
+              <div class="col s12 m2 l2">
                 <p>移動</p>
                 <a class="waves-effect waves-light btn" href="javascript:move_to_left()">←</a>
                 <a class="waves-effect waves-light btn" href="javascript:move_to_right()">→</a>
@@ -56,6 +56,15 @@
                 <div class="col s1">
                   <p>25</p>
                 </div>
+              </div>
+              <div class="col s12 m2 l2">
+                  <p style="visibility:hidden">_</p>
+                  <a class="waves-effect waves-light btn" href="javascript:move_to_left()">完了</a>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <span>現在の移動回数　</span><span id="move_count">0</span>
               </div>
             </div>
           </div>
