--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <script type="text/javascript" src="js/main.js"></script>
   </head>
 
+  <!-- このHTMLは24インチくらいのモニタで全画面表示されることを想定しています -->
   <body onLoad="initialize();">
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Logo</a>
+        <a href="#" class="brand-logo center">Gradient Descent Game</a>
         <!--
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
@@ -32,14 +33,32 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">Display</span>
-            <canvas id="canvas1" width="800" height="400" style="border:solid 1px #AAA"></canvas>
+            <canvas id="canvas1" width="800" height="300" style="border:solid 1px #AAA"></canvas>
           </div>
           <div class="card-action">
             <div class="row">
+              <div class="col s12">
+                <a id="start" class="waves-effect waves-light btn" href="javascript:start_game()">ゲーム開始</a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <div>Demo</div>
+                <div class="switch">
+                    <label>
+                    Off
+                    <input type="checkbox" id="demo_switch">
+                    <span class="lever"></span>
+                    On
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <div class="col s12 m2 l2">
                 <p>移動</p>
-                <a class="waves-effect waves-light btn" href="javascript:move_to_left()">←</a>
-                <a class="waves-effect waves-light btn" href="javascript:move_to_right()">→</a>
+                <a id="left" class="waves-effect waves-light btn disabled" href="javascript:move_to_left()">←</a>
+                <a id="right" class="waves-effect waves-light btn disabled" href="javascript:move_to_right()">→</a>
               </div>
               <div class="col s12 m8s l8">
                 <p>ステップ幅（1回の移動で動く幅）</p>
@@ -49,7 +68,7 @@
                 <div class="col s10">
                   <form>
                     <p class="range-field">
-                      <input type="range" id="range1" min="1" max="25" />
+                      <input type="range" id="step_range" min="1" max="25" />
                     </p>
                   </form>
                 </div>
@@ -59,12 +78,20 @@
               </div>
               <div class="col s12 m2 l2">
                   <p style="visibility:hidden">_</p>
-                  <a class="waves-effect waves-light btn" href="javascript:move_to_left()">完了</a>
+                  <a id="submit" class="waves-effect waves-light btn disabled" href="javascript:submit_answer()">完了</a>
                 </div>
             </div>
             <div class="row">
               <div class="col s12">
-                <span>現在の移動回数　</span><span id="move_count">0</span>
+                <span>現在の移動回数　</span>
+                <span id="move_count">0</span>
+              </div>
+            </div>
+            <div class="row" id="answer" style="display:none;">
+              <div class="col s12">
+                <span style="font-size:2em;">結果︰ </span>
+                <span id="result" style="font-size:2em;"></span>
+                <a id="next" class="waves-effect waves-light btn" href="javascript:next_game()">OK</a>
               </div>
             </div>
           </div>
