--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <div>Demo</div>
+                <div>Blind</div>
                 <div class="switch">
                     <label>
                     Off
-                    <input type="checkbox" id="demo_switch">
+                    <input type="checkbox" id="blind_switch" checked="checked">
                     <span class="lever"></span>
                     On
                   </label>
