add level radio button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col s12">
+              <div class="col s12 m5 l3">
                 <div>Blind</div>
                 <div class="switch">
                     <label>
@@ -53,7 +53,25 @@
                   </label>
                 </div>
               </div>
+              <div class="col s12 m7 l9">
+                <div>難易度</div>
+                <form>
+                  <label>
+                    <input class="with-gap" name="group1" type="radio" id="level_easy" checked="checked"/>
+                    <span>Easy</span>
+                  </label>
+                  <label>
+                    <input class="with-gap" name="group1" type="radio" id="level_normal"/>
+                    <span>Normal</span>
+                  </label>
+                  <label>
+                    <input class="with-gap" name="group1" type="radio" id="level_hard"/>
+                    <span>Hard</span>
+                  </label>
+                </form>
+              </div>
             </div>
+            <hr>
             <div class="row">
               <div class="col s12 m2 l2">
                 <p>移動</p>
