--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">Display</span>
-            <canvas id="canvas1" width="800" height="300" style="border:solid 1px #AAA"></canvas>
+            <canvas id="canvas1" width="800" height="450" style="border:solid 1px #AAA"></canvas>
           </div>
           <div class="card-action">
             <div class="row">
@@ -47,7 +47,7 @@
                 <div class="switch">
                     <label>
                     Off
-                    <input type="checkbox" id="blind_switch" checked="checked">
+                    <input type="checkbox" id="blind_switch">
                     <span class="lever"></span>
                     On
                   </label>
@@ -57,7 +57,7 @@
                 <div>難易度</div>
                 <form>
                   <label>
-                    <input class="with-gap" name="group1" type="radio" id="level_easy" checked="checked"/>
+                    <input class="with-gap" name="group1" type="radio" id="level_easy"/>
                     <span>Easy</span>
                   </label>
                   <label>
@@ -65,7 +65,7 @@
                     <span>Normal</span>
                   </label>
                   <label>
-                    <input class="with-gap" name="group1" type="radio" id="level_hard"/>
+                    <input class="with-gap" name="group1" type="radio" id="level_hard" checked="checked" />
                     <span>Hard</span>
                   </label>
                 </form>
