adjust the indent

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <p>塩を入れる量にも最適な量があります．機械学習ではまず「不味さ」の数理モデルを立てて，ここから計算した勾配を用いて「不味さ」の最小となる塩の量を探します．</p>
             <p style="padding-top: 5px;">何回も料理を作り直すのは手間ですから，できるだけ少ない回数でできるだけ最適な量を求めることが目標となります．</p>
             <br>
-            <p style="font-size:1.4em; padding:5px 0px;">実際の問題では</p>
+            <p style="font-size:1.4em; padding:5px 0px;">研究の対象</p>
             <p>実際には塩の量以外にも，砂糖の量や水の量，火加減など様々な「パラメータ」が存在します．これらを一度に学習し，最適値を求めるのは非常に困難になります．</p>
             <p style="padding-top: 5px;">このような中で，できるだけ少ない回数で，できるだけ良い結果を出せるアルゴリズムを考えるのが研究の対象となります．</p>
           </div>
