--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="col s12">
                 <span style="font-size:2em;">結果︰ </span>
                 <span id="result" style="font-size:2em;"></span>
-                <a id="next" class="waves-effect waves-light btn" href="javascript:next_game()">OK</a>
+                <a id="next" class="waves-effect waves-light btn" href="javascript:play_history()">Replay</a>
               </div>
             </div>
           </div>
