add fundamental functions

--- a/index.html
+++ b/index.html
@@ -128,6 +128,51 @@
             <p>(3) 一番低い位置に着いたと思ったら「完了」を押してね</p>
             <div style="padding: 10px 0px;"><hr></div>
             <p style="font-size:1.5em;">ランキング</p>
+            <p>[Easy]</p>
+            <div>
+              <p style="margin-left:10px">
+                <span>1位　<span>
+                <span id="ranking_easy_1"></span>
+              </p>
+              <p style="margin-left:10px">
+                <span>2位　</span>
+                <span id="ranking_easy_2"></span>
+              </p>
+              <p style="margin-left:10px">
+                <span>3位　</span>
+                <span id="ranking_easy_3"></span>
+              </p>
+            </div>
+            <p>[Normal]</p>
+            <div>
+              <p style="margin-left:10px">
+                <span>1位　</span>
+                <span id="ranking_normal_1"></span>
+              </p>
+              <p style="margin-left:10px">
+                <span>2位　</span>
+                <span id="ranking_normal_2"></span>
+              </p>
+              <p style="margin-left:10px">
+                <span>3位　</span>
+                <span id="ranking_normal_3"></span>
+              </p>
+            </div>
+            <p>[Hard]</p>
+            <div>
+              <p style="margin-left:10px">
+                <span>1位　</span>
+                <span id="ranking_hard_1"></span>
+              </p>
+              <p style="margin-left:10px">
+                <span>2位　</span>
+                <span id="ranking_hard_2"></span>
+              </p>
+              <p style="margin-left:10px">
+                <span>3位　</span>
+                <span id="ranking_hard_3"></span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
